Add sitenav and home html, css styles

--- a/index.html
+++ b/index.html
@@ -69,12 +69,88 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
+                <div class="home__container container grid">
+                    <div class="home__data">
+                        <h1 class="home__title">
+                            New Clothing <br>
+                            Collection
+                        </h1>
 
+                        <p class="home__description">
+                            The new collection of clothing from <br>
+                            the best brands this year.
+                        </p>
+
+                        <a href="#new" class="button__link">
+                            Explore <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="home__images">
+                        <img src="/assets/img/home1.png" alt="home image">
+                        <img src="/assets/img/home2.png" alt="home image2">
+                    </div>
+                </div>
             </section>
 
             <!--==================== NEW ====================-->
             <section class="new section" id="new">
+                <h2 class="section__title">
+                    New Categories
+                </h2>
 
+                <div class="new__container container grid">
+                    <article class="new__card">
+                        <img class="new__img" src="/assets/img/new1.png" alt="new image">
+
+                        <a class="new__link" href="#">
+                            <div class="new__data">
+                                <h2 class="new__title">
+                                    Hoodie & Sweatshirt
+                                </h2>
+                                <span class="new__subtitle">
+                                    Winter collection
+                                </span>
+                            </div>
+
+                            <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </article>
+
+                    <article class="new__card">
+                        <img class="new__img" src="/assets/img/new2.png" alt="new image">
+
+                        <a class="new__link" href="#">
+                            <div class="new__data">
+                                <h2 class="new__title">
+                                    Pants & Jackets
+                                </h2>
+                                <span class="new__subtitle">
+                                    Winter collection
+                                </span>
+                            </div>
+
+                            <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </article>
+
+                    <article class="new__card">
+                        <img class="new__img" src="/assets/img/new3.png" alt="new image">
+
+                        <a class="new__link" href="#">
+                            <div class="new__data">
+                                <h2 class="new__title">
+                                    Coats & Coat Sets
+                                </h2>
+                                <span class="new__subtitle">
+                                    Winter collection
+                                </span>
+                            </div>
+
+                            <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </article>
+                </div>
             </section>
 
             <!--==================== COLLECTION ====================-->
