--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
         <!--=============== SWIPER CSS ===============-->
-        <link rel="stylesheet" href="#">
+        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
@@ -155,12 +155,93 @@
 
             <!--==================== COLLECTION ====================-->
             <section class="collection section" id="collection">
+                <div class="collection__container container">
+                    <div class="collection__explore">
+                        <div class="collection__data-men">
+                            <h2 class="collection__title">
+                                Men <br>
+                                Collection
+                            </h2>
+                            <a href="#" class="button__link">
+                                Explore Clothes<i class="ri-arrow-right-line"></i>
+                            </a>
+                        </div>
+                        <img src="/assets/img/collection1.png" alt="collection image">
+                    </div>
 
+                    <div class="collection__explore">
+                        <img src="/assets/img/collection2.png" alt="collection image">
+                        <div class="collection__data-women">
+                            <h2 class="collection__title">
+                                Women <br>
+                                Collection
+                            </h2>
+                            <a href="#" class="button__link">
+                                Explore Clothes<i class="ri-arrow-right-line"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== PRODUCTS ====================-->
             <section class="products section" id="products">
+                <h2 class="section__title">
+                    Best Products
+                </h2>
 
+                <div class="products__container container swiper">
+                    <div class="swiper-wrapper">
+                        <article class="products__card swiper-slide">
+                            <img src="/assets/img/product1.png" alt="products image" class="products__img">
+                            <h2 class="products__title">
+                                Gotland black Jacket
+                            </h2>
+                            <span class="products__price">
+                                $124.99
+                            </span>
+                        </article>
+
+                        <article class="products__card swiper-slide">
+                            <img src="/assets/img/product2.png" alt="products image" class="products__img">
+                            <h2 class="products__title">
+                                Black Sports Shorts
+                            </h2>
+                            <span class="products__price">
+                                $34.99
+                            </span>
+                        </article>
+
+                        <article class="products__card swiper-slide">
+                            <img src="/assets/img/product3.png" alt="products image" class="products__img">
+                            <h2 class="products__title">
+                                Knox Quilted Jacket
+                            </h2>
+                            <span class="products__price">
+                                $97.99
+                            </span>
+                        </article>
+
+                        <article class="products__card swiper-slide">
+                            <img src="/assets/img/product4.png" alt="products image" class="products__img">
+                            <h2 class="products__title">
+                                Blue Sport Pants
+                            </h2>
+                            <span class="products__price">
+                                $69.99
+                            </span>
+                        </article>
+                    </div>
+
+                    <div class="swiper-button-next">
+                        <i class="ri-arrow-right-line"></i>
+                    </div>
+
+                    <div class="swiper-button-prev">
+                        <i class="ri-arrow-left-line"></i>
+                    </div>
+
+                </div>
             </section>
 
             <!--==================== BRANDS ====================-->
@@ -181,7 +262,7 @@
         <script src=""></script>
 
         <!--=============== SWIPER JS ===============-->
-        <script src=""></script>
+        <script src="assets/js/swiper-bundle.min.js"></script>
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
