--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a class="nav__link" href="#home">
+                            <a class="nav__link active-link" href="#home">
                                 <i class="ri-home-line"></i>
                                 <span>Home</span>
                             </a>
@@ -60,7 +60,7 @@
                 </div>
 
                 <!-- Theme change button -->
-                <i class="ri-moon-line"></i>
+                <i class="ri-moon-line change-theme" id="theme-button"></i>
             </nav>
 
         </header>
@@ -355,6 +355,9 @@
         </footer>
 
         <!--========== SCROLL UP ==========-->
+        <a href="#" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-line"></i>
+        </a>
 
 
         <!--=============== SCROLLREVEAL ===============-->
